[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Slingshot.gd" type="Script" id=1]
[ext_resource path="res://Assets/Props/Slingshot2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Props/Slingshot1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Blocks - SHD/Rocket.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 39.0512

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.675439, 0.986842 )
colors = PoolColorArray( 1, 0.4, 0.4, 1, 1, 0.607843, 0.607843, 0.498039, 0, 0.0862745, 1, 0.733333 )

[node name="Slingshot" type="Node2D" groups=["Slingshot"]]
script = ExtResource( 1 )

[node name="TouchArea" type="Area2D" parent="."]
position = Vector2( -10, -142 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchArea"]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="CenterOfSlingshot" type="Position2D" parent="."]
position = Vector2( -10, -142 )

[node name="LeftLine" type="Line2D" parent="."]
z_index = 1
points = PoolVector2Array( 7.99999, -146, -52, -143 )
width = 3.0
default_color = Color( 0, 0, 0, 1 )

[node name="Front" type="Sprite" parent="."]
position = Vector2( -5, -80 )
scale = Vector2( 0.15, 0.15 )
z_index = 1
texture = ExtResource( 3 )

[node name="Back" type="Sprite" parent="."]
position = Vector2( -5, -80 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="RightLine" type="Line2D" parent="."]
points = PoolVector2Array( -29, -138, -52, -144 )
width = 3.0
default_color = Color( 0, 0, 0, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="ShotArc" type="Line2D" parent="."]
z_index = 2
points = PoolVector2Array( 672, -242 )
default_color = Color( 0.4, 0.501961, 1, 1 )
gradient = SubResource( 2 )

[node name="Arrow" type="Sprite" parent="."]
visible = false
position = Vector2( -15, -314 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[connection signal="input_event" from="TouchArea" to="." method="_on_TouchArea_input_event"]
